--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
-frontend/dist
-frontend/node_modules
+frontend/node_modules/
+frontend/dist/
+
+# Node.js / frontend
+frontend/node_modules/
+frontend/dist/
+
+# Python
+.venv/
+venv/
+ENV/
+env/
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Environment variables
 .env
-__pycache__
+*.env
+.env.*
+
+# Uploads directory
+uploads/
+uploads/*
