--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "async-function": "^1.0.0",
     "available-typed-arrays": "^1.0.7",
     "balanced-match": "^1.0.2",
+    "blurhash": "^2.0.5",
     "brace-expansion": "^1.1.11",
     "browserslist": "^4.24.4",
     "call-bind": "^1.0.8",
